polling/kubernetes/comments-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: comments
  template:
    metadata:
      labels:
        name: comments
    spec:
      containers:
        - name: comments
          image: coffee51/comments
