polling/kubernetes/nats-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nats
  template:
    metadata:
      labels:
        name: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming
          args:
            [
              '-p',
              '4222',
              '-hbi',
              '5s',
              '-hbt',
              '5s',
              '-hbf',
              '2',
              '-SD',
              '-cid',
              'ticketing',
            ]
