polling/kubernetes/spots-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spots-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: spots
  template:
    metadata:
      labels:
        name: spots
    spec:
      containers:
        - name: spots
          image: coffee51/spots
