polling/kubernetes/authentication-service.yml
apiVersion: v1
kind: Service
metadata:
    name: authentication-service
spec:
    selector:
        name: authentication
    ports:
        - name: authentication
          protocol: TCP
          port: 3000
          targetPort: 3000
