polling/kubernetes/comments-mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: comments-mongo-service
spec:
  selector:
    name: comments-mongo
  ports:
    - name: mongo-db
      protocol: TCP
      port: 27017
      targetPort: 27017
