polling/kubernetes/spots-mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spots-mongo-service
spec:
  selector:
    app: spots-mongo
  ports:
    - name: mongo-db
      protocol: TCP
      port: 27017
      targetPort: 27017
